--- a/app/src/main/resources/static/student/index.html
+++ b/app/src/main/resources/static/student/index.html
@@ -120,7 +120,8 @@
       {{#each this}}
         <tr data-no="{{no}}" onclick="getStudent(event)">
           <td>{{no}}</td>
-          <td><img src="https://jafdpuys3518.edge.naverncp.com/qRPqP06Ry7/{{photo}}?type=f&w=20&h=20&faceopt=true&ttype=jpg" class="photo20x20">{{name}}</td>
+        
+          <td><img src="https://gtumxlxq3591.edge.naverncp.com/xYEMUWGzS1/5570c8c5-2cf8-47f7-9b35-3284b22af7f2/{{photo}}?type=f&w=20&h=20&faceopt=true&ttype=jpg" class="photo20x20">{{name}}</td>
           <td>{{#if working}}예{{else}}아니오{{/if}}</td>
           <td>{{tel}}</td>
         </tr>
