--- a/app/src/main/resources/static/student/index.html
+++ b/app/src/main/resources/static/student/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <h1>학생</h1>
+    <h1>학생입니다</h1>
 
     <aside>
       <div>
